--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,12 @@
 			<artifactId>json</artifactId>
 			<version>20160212</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
+
 		<!-- development tools -->
 		<dependency>
 			<groupId>junit</groupId>
